RESOLVED FIXED155471
REGRESSION(r194394): >2x slow-down on CDjs
https://bugs.webkit.org/show_bug.cgi?id=155471
Summary REGRESSION(r194394): >2x slow-down on CDjs
Filip Pizlo
Reported 2016-03-14 15:26:35 PDT
Huge regression therefore rollout.
Attachments
patch for landing (4.05 KB, patch)
2016-03-14 15:29 PDT, Filip Pizlo
no flags
patch for landing (16.21 KB, patch)
2016-03-14 15:52 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2016-03-14 15:29:09 PDT
Created attachment 274037 [details] patch for landing
Filip Pizlo
Comment 2 2016-03-14 15:52:52 PDT
Created attachment 274043 [details] patch for landing Previous upload of the patch accidentally excluded the LayoutTests part of the rollout.
Filip Pizlo
Comment 3 2016-03-14 16:30:43 PDT
Note You need to log in before you can comment on or make changes to this bug.